<resources>
    <string name="app_name">ParkingLotChecker</string>
    <string name="notice">*</string>
    <string name="empty"> </string>
    <string name="car">Car: </string>
    <string name="license">License Plate:</string>
    <string name="state">State: </string>
    <string name="exception">* The submit button has not been pressed yet!</string>
    <string name="ballardStr">Ballard Parking Lot</string>
    <string name="youngStr">Young Parking Lot</string>
    <string name="eastStr">East Field Parking Lot</string>
    <string name="eaglesStr">Eagles Field Parking Lot</string>
    <string name="girlsStr">Girls Parking Garage</string>
    <string name="carPresent">Car is\nPresent</string>
    <string name="carGone">Car is\nMissing</string>
    <string name="carDiff">Car is\nDifferent</string>
    <string name="next"> Next  </string>
    <string name="prev">Previous</string>
    <string name="loadingErr">Error loading parking lot!</string>
    <string name="submit">Submit</string>
    <string name="dodge">Dodge</string>
    <string name="ram">Ram</string>
    <string name="ford">Ford</string>
    <string name="mustang">Mustang</string>
    <string name="toyota">Toyota</string>
    <string name="camry">Camry</string>
    <string name="corvette">Corvette</string>
    <string name="zr1">ZR1</string>
    <string name="ferrari">Ferrari</string>
    <string name="italia">458 Italia</string>
    <string name="s1">Florida</string>
    <string name="s2">Missouri</string>
    <string name="s3">Texas</string>
    <string name="s4">California</string>
    <string name="back">Back</string>
    <string name="l1">JK423J</string>
    <string name="l2">BOSS 12</string>
    <string name="l3">SDF6SD</string>
    <string name="l4">234H34</string>
    <string name="l5">7J6G43</string>
    <string name="l6">7BC743</string>
    <string name="l7">JASON1</string>
    <string name="l8">6DFG75</string>
    <string name="l9">H644GG</string>
    <string name="l10">BLAKE1</string>
    <string name="l11">835GA2</string>
    <string name="l12">KJ7354</string>
    <string name="l13">111G44</string>
    <string name="l14">51FS54</string>
    <string name="l15">JK423J</string>
    <string name="l16">ROCKN</string>
    <string name="l17">2SJ2F9</string>
    <string name="l18">CRAZD</string>
    <string name="l19">KILLZO</string>
    <string name="l20">R8287K</string>
    <string name="l21">73G129</string>
    <string name="l22">KILLR</string>
    <string name="l23">9867HS</string>
    <string name="l24">BEATDWN</string>
    <string name="l25">23G81J</string>
</resources>
