<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a127106.parkinglotchecker.MainActivity">

    <!-- Check mark was found on pixabay.com -->

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/ballardStr"
        android:background="#EEE"
        android:textSize="6pt"
        android:id="@+id/ballardBtn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/youngStr"
        android:background="#EEE"
        android:textSize="6pt"
        android:id="@+id/youngBtn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textSize="5.7pt"
        android:text="@string/eastStr"
        android:background="#EEE"
        android:id="@+id/eastBtn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textSize="5.7pt"
        android:text="@string/eaglesStr"
        android:background="#EEE"
        android:id="@+id/eaglesBtn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="280dp"
        />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/girlsStr"
        android:background="#EEE"
        android:textSize="5.8pt"
        android:id="@+id/girlsBtn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="360dp"
        />

    <TextView
        android:text="@string/empty"
        android:textSize="4pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ballardBtn"
        android:textColor="#c3ff0000"
        android:layout_alignLeft="@+id/ballardBtn"
        android:layout_alignStart="@+id/ballardBtn"
        android:id="@+id/ballardExc" />
    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ballardNotice"
        android:textColor="#c3ff0000"
        android:layout_alignTop="@+id/ballardBtn"
        android:layout_toRightOf="@+id/ballardBtn"
        android:layout_toEndOf="@+id/ballardBtn" />

    <TextView
        android:text="@string/empty"
        android:textSize="4pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/youngBtn"
        android:textColor="#c3ff0000"
        android:layout_alignLeft="@+id/youngBtn"
        android:layout_alignStart="@+id/youngBtn"
        android:id="@+id/youngExc" />
    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/youngNotice"
        android:textColor="#c3ff0000"
        android:layout_alignTop="@+id/youngBtn"
        android:layout_toRightOf="@+id/youngBtn"
        android:layout_toEndOf="@+id/youngBtn" />

    <TextView
        android:text="@string/empty"
        android:textSize="4pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eastBtn"
        android:textColor="#c3ff0000"
        android:layout_alignLeft="@+id/eastBtn"
        android:layout_alignStart="@+id/eastBtn"
        android:id="@+id/eastExc" />
    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eastNotice"
        android:textColor="#c3ff0000"
        android:layout_alignTop="@+id/eastBtn"
        android:layout_toRightOf="@+id/eastBtn"
        android:layout_toEndOf="@+id/eastBtn" />

    <TextView
        android:text="@string/empty"
        android:textSize="4pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eaglesBtn"
        android:textColor="#c3ff0000"
        android:layout_alignLeft="@+id/eaglesBtn"
        android:layout_alignStart="@+id/eaglesBtn"
        android:id="@+id/eaglesExc" />
    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eaglesNotice"
        android:textColor="#c3ff0000"
        android:layout_alignTop="@+id/eaglesBtn"
        android:layout_toRightOf="@+id/eaglesBtn"
        android:layout_toEndOf="@+id/eaglesBtn" />

    <TextView
        android:text="@string/empty"
        android:textSize="4pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/girlsBtn"
        android:textColor="#c3ff0000"
        android:layout_alignLeft="@+id/girlsBtn"
        android:layout_alignStart="@+id/girlsBtn"
        android:id="@+id/girlsExc" />
    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/girlsNotice"
        android:textColor="#c3ff0000"
        android:layout_alignTop="@+id/girlsBtn"
        android:layout_toRightOf="@+id/girlsBtn"
        android:layout_toEndOf="@+id/girlsBtn" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/checkmark"
        android:id="@+id/ballardChkMark"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="270dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/checkmark"
        android:id="@+id/youngChkMark"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="270dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/checkmark"
        android:id="@+id/eastChkMark"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="270dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/checkmark"
        android:id="@+id/eaglesChkMark"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="270dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/checkmark"
        android:id="@+id/girlsChkMark"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="270dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/ballardBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/youngBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/eastBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView10"
        android:layout_alignTop="@+id/eaglesBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView13"
        android:layout_alignTop="@+id/girlsBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textColor="#000"
        android:textSize="5pt"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="5pt"
        android:textColor="#000"
        android:id="@+id/textView15"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />
</RelativeLayout>
